Fixed input overlap bug & date misplacement

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -492,7 +492,7 @@ It will look normal on 1080p, 1440p, and 4k monitors */
     .reminders section{
         margin-left: 0%;
         margin-top: -63%;
-        margin-bottom: 0%;
+        margin-bottom: 65%;
     }
     .days{
         width: 100%;
